@startuml logical_view
title Logical View - Class Diagram

class Product {
  - id: Integer
  - name: String
  - category: String
  - price: Float
  - stock: Integer
  + __repr__(): String
}
class Sale {
  - id: Integer
  - timestamp: DateTime
  + __repr__(): String
}
class SaleItem {
  - id: Integer
  - sale_id: Integer
  - product_id: Integer
  - quantity: Integer
  - price: Float
  + __repr__(): String
}
class Store {
  - id: Integer
  - name: String
  - location: String
  + __repr__(): String
}
class CentralStock {
  - id: Integer
  - product_id: Integer
  - quantity: Integer
  + __repr__(): String
}

Product "1" <-- "*" SaleItem : contains
Sale "1" <-- "*" SaleItem : items
Store "1" <-- "*" Product : manages
Store "1" <-- "*" Sale : records
Product "1" <-- "*" CentralStock : stocked in
@enduml
